@@ -17,7 +17,7 @@
 
 /* Exported function prototypes */
 bool can_see_map(struct char_data *ch);
-void str_and_map(char *str, struct char_data *ch );
+void str_and_map(char *str, struct char_data *ch, room_vnum target_room );
 ACMD(do_map);
 
 #endif /* ASCIIMAP_H_*/
